# GuiderPort

./: .gitignore  ChangeLog  README.md
case/: README  case.scad  case.stl
client/: Makefile  gpclient.c
firmware/: ChangeLog  INSTALL  LUFAConfig.h  Makefile.am  README  configure.ac  configureit  descriptor.c  descriptor.h  event.c  event.h  guiderport.c  port.c  port.h  serial.c  serial.h  timer.c  timer.h
hardware/: README  guiderport.cmp  guiderport.kicad_pcb  guiderport.mod  guiderport.net  guiderport.pro  guiderport.sch
